k8s/todoapp-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-api-deployment
  labels:
    app: todoapp-api-label
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: todoapp-api-label
  template:
    metadata:
      labels:
        app: todoapp-api-label
    spec:
      containers:
      - name: todoapp-api-container
        image: mrstevebang/todoapp-api:1.0.11
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: todoapp-api-service
spec:
  selector:
    app: todoapp-api-label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
