k8s/todoapp-web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-webapp-deployment
  labels:
    app: todoapp-webapp-label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp-webapp-label
  template:
    metadata:
      labels:
        app: todoapp-webapp-label
    spec:
      containers:
      - name: todoapp-webapp-container
        image: mrstevebang/todoapp-webapp:1.0.15
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html/config.js
          subPath: config.js
      volumes:
      - name: config-volume
        configMap:
          name: todoapp-config


---
apiVersion: v1
kind: Service
metadata:
  name: todoapp-webapp-service
spec:
  selector:
    app: todoapp-webapp-label
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
