k8s/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Optional: Use cert-manager if you want automatic certificate provisioning
spec:
  tls:
  - hosts:
    - todo.dev
    secretName: todoapp-web-tls-secret  # Use a secret for the TLS certificate
  rules:
  - host: todo.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todoapp-webapp-service
            port:
              number: 80
